--- a/css/timeSeries.css
+++ b/css/timeSeries.css
@@ -6,23 +6,25 @@ body {
 div.slide {
     width: 100%;
     height: 100%;
-    background-color: #353535;
+    background-color: #ededed;
 }
 
 h2.selected + div > div.slide {
-    background-color: #555555;
+    background-color: #ffffff;
 }
 
 form#searchBox {
-    width:500px;
-    margin: auto;
-    color: #141414;
-    padding-top: 200px;
+    width:400px;
+    position: fixed;
+    top: 35%;
+    left: 15%;
+    vertical-align: middle;
     background-color: transparent;
 }
 
 form#searchBox h1 {
-    color: #141414;
+    color: rgba(0, 0, 0, 0.60);
+    line-height: 1em;
     margin-bottom: 25px;
     font-size: 2.1em;
 }
@@ -33,23 +35,26 @@ input#text, input#button {
 
 input#text {
     padding: 8px 15px;
-    background: #414141;
+    background: rgba(0, 0, 0, 0.12);
 }
 
 input#button {
     position: relative;
-    padding: 6px 15px;
-    left: -8px;
-    border: 2px solid #313131;
-    background-color: #313131;
+    padding: 8px 15px;
+    left: -4px;
+    background: rgba(0, 0, 0, 0.24);
 }
 
 input#button:hover  {
-    background-color: #555555;
+    background-color: rgba(0, 0, 0, 0.36);
 }
 
-/*
-h2 span, div.slide {
+input#button:active  {
+    background-color: rgba(0, 0, 0, 0.48);
+}
+
+
+/*h2 span, div.slide {
     -moz-transition: background-color 0.3s;
     -o-transition: background-color 0.3s;
     -webkit-transition: background-color 0.3s;
