--- a/css/timeSeries.css
+++ b/css/timeSeries.css
@@ -6,6 +6,7 @@ body {
 div.slide {
     width: 100%;
     height: 100%;
+    border: 1px solid #909090;
     background-color: #ededed;
 }
 
@@ -22,11 +23,14 @@ form#searchBox {
     background-color: transparent;
 }
 
-form#searchBox h1 {
+h1 {
     color: rgba(0, 0, 0, 0.60);
+    font-size: 40px;
+}
+
+form#searchBox h1 {
     line-height: 1em;
     margin-bottom: 25px;
-    font-size: 2.1em;
 }
 
 input#text, input#button {
@@ -53,6 +57,32 @@ input#button:active  {
     background-color: rgba(0, 0, 0, 0.48);
 }
 
+div#head_sec {
+    background-color: transparent;
+    width: 100%;
+    height: 60px;
+}
+
+div#head_sec h1 {
+    padding-left: 15px;
+    line-height: 60px;
+}
+
+div#viz_cont, div#legend_cont {
+    height: calc(100% - 60px - 7px);
+    top: 60px;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.36);
+}
+
+div#viz_cont {
+    width: calc(80% - 24px - 10px);
+}
+
+div#legend_cont {
+    width: calc(20% - 24px - 10px);
+    right: 5px;
+}
 
 /*h2 span, div.slide {
     -moz-transition: background-color 0.3s;
