--- a/css/timeSeries.css
+++ b/css/timeSeries.css
@@ -4,14 +4,14 @@ body {
     color: rgba(0, 0, 0, 0.60);
 }
 
-div.page {
+div.slide_container {
     width: 100%;
     height: 100%;
     border: 1px solid #909090;
     background-color: #ededed;
 }
 
-h2.selected + div > div.page {
+h2.selected + div > div.slide_container {
     background-color: #ffffff;
 }
 
@@ -63,34 +63,35 @@ input#button:active {
     background-color: rgba(0, 0, 0, 0.48);
 }
 
-div.page > div {
+div.slide_container > div {
     margin: 5px;
 }
 
-div.page div.page_top {
+div.slide_container div.page_top {
     height: 75px;
 }
 
-div.viz_cont, div.legend_cont, div#compare_cont > div {
+div.main_div, div.secondary_div, div#compare_cont > div {
     display: inline-block;
 }
 
-div.page div.viz_cont, div.page div.legend_cont {
+div.slide_container div.main_div, div.slide_container div.secondary_div {
     height: calc(100% - 91px);
     margin-top: 0;
 }
 
-div.page div.viz_cont {
+div.slide_container div.main_div {
     width: calc(100% - 196px);
     float: left;
+    overflow-y: scroll;
 }
 
-div.page div.legend_cont {
+div.slide_container div.secondary_div {
     margin-left: 0;
     width: 180px;
 }
 
-div.page div.page_top h1 {
+div.slide_container div.page_top h1 {
     font-size: 3.2em;
     padding-left: 15px;
     line-height: 75px;
@@ -120,6 +121,14 @@ div#compare_cont > div {
 
 div#compare_cont #comp_attr {
     float: left;
+}
+
+input#add {
+    float:right;
+}
+
+svg {
+    width: 100%;
 }
 
 /*h2 span, div.slide {
