Started on brush for focus and context. WIP.

--- a/public/stylesheets/Chart.css
+++ b/public/stylesheets/Chart.css
@@ -10,3 +10,9 @@
     fill: none;
     stroke-width: 1.5px;
 }
+
+.brush .extent {
+    stroke: #fff;
+    fill-opacity: .125;
+    shape-rendering: crispEdges;
+}
