--- a/public/stylesheets/tablesorter.css
+++ b/public/stylesheets/tablesorter.css
@@ -21,11 +21,15 @@ table.tablesorter thead tr .header {
 table.tablesorter tbody td {
 	color: #3D3D3D;
 	padding: 4px;
+    border: 1px solid #FFF;
 	background-color: #FFF;
 	vertical-align: top;
 }
 table.tablesorter tbody tr:nth-child(odd) td {
     background-color: #fafafa;
+}
+table.tablesorter tbody tr:hover td {
+    background-color: #8dbdd8;
 }
 table.tablesorter thead tr .headerSortUp {
 	background-image: url(/images/asc.gif);
