--- a/public/stylesheets/tablesorter.css
+++ b/public/stylesheets/tablesorter.css
@@ -3,14 +3,16 @@ table.tablesorter {
 	font-family:arial;
 	background-color: #CDCDCD;
 	margin:10px 0pt 15px;
-	font-size: 8pt;
+	font-size: 10pt;
+    line-height: 12pt;
 	width: 100%;
 	text-align: left;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	background-color: #e6EEEE;
 	border: 1px solid #FFF;
-	font-size: 8pt;
+	font-size: 11pt;
+    line-height: 17pt;
 	padding: 4px;
 }
 table.tablesorter thead tr .header {
@@ -20,7 +22,7 @@ table.tablesorter thead tr .header {
 }
 table.tablesorter tbody td {
 	color: #3D3D3D;
-	padding: 4px;
+	padding: 3px;
     border: 1px solid #FFF;
 	background-color: #FFF;
 	vertical-align: top;
